fixed social buttons on mobile

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -112,7 +112,7 @@ section{
     list-style: none;
 
     li{
-      margin: auto 10px;
+      margin: 10px 15px;
       display: inline-block;
     }
   }
